--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ header {
   width: auto;
   padding: 1rem 12%;
 
-  border-bottom: dotted 1px rgba(0, 0, 0, 0.25);
+  border-bottom: dotted 1px $accent;
 }
 
 header:hover #themeSwitch {
@@ -62,6 +62,7 @@ header:hover #languageSwitch {
 /*The Chevron Icon*/
 #c-213 {
   scale: 0.8;
+  min-width: 1rem;
 }
 
 /*The Language Icon*/
@@ -115,26 +116,31 @@ header:hover #languageSwitch {
 //  background-color: firebrick;
 //}
 
-@media only screen and (max-width: 600px) {
-  #emailContainer {
-    display: none;
-  }
-}
 
 #contentContainer {
   margin-inline: 12%;
   padding: 2rem;
   font-weight: bold;
-  margin-top: 2rem;
-
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: solid transparent 2px;
-  height: 30rem;
-  background-color: $bg;
+  height: fit-content;
   color: $text;
-  @apply rounded-2xl;
 }
+@media screen and (max-width: 768px) {
+  header {
+    padding: 0.5rem 6%
+  }
+  #emailContainer {
+    display: none;
+  }
+  #navContainer {
+    gap: 0;
+  }
+  #languageSwitch {
+    margin-right: 1rem;
+  }
+}
+
